--- a/docs/ledning/H 0.01-.rst
+++ b/docs/ledning/H 0.01-.rst
@@ -13,6 +13,7 @@ Syfte Verksamhetshandboken är vårt verktyg för att styra utförandet av de pr
 
 Omfattning Kvalitets- och miljöledningssystemen är uppbyggda enligt och motsvarar kraven i systemstandarderna SS-EN ISO 9001:2008 och SS-EN ISO 14001:2004. Systemen omfattar samtliga avdelningar inom Assemblin EL  AB.Verksamhetshandboken: Beskrivning av kvalitets- och miljöledningssystemen i sin helhet.
 
-.. image:: images/protocols.png
+H 0.10 Verksamhetspolicy
+^^^^^^^^^^^^^^
 
-Such a design divides security concerns into two parts:
+Authentication is needed when an application needs to know the identity of the current user.Typically these applications manage data on behalf of that user and need to make sure that this user can onlyaccess the data for which he is allowed. The most common example for that is (classic) web applications –but native and JS-based applications also have a need for authentication.The most common authentication protocols are SAML2p, WS-Federation and OpenID Connect – SAML2p being themost popular and the most widely deployed.OpenID Connect is the newest of the three, but is considered to be the future because it has themost potential for modern applications. It was built for mobile application scenarios right from the startand is designed to be API friendly.
